[project]
name = "hyper_fetch"
version = "0.0.1"
description = "High-performance, async, parallel HTTP downloader for Python 3"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "asyncio",
    "brotli>=1.1.0",
    "click>=8.1.8",
    "httpx[socks]>=0.28.1",
    "zstandard>=0.23.0",
]
